[package]
name = "overpass"
version = "0.1.0"
edition = "2021"
authors = ["Phineas Jensen"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.8"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
